crates/smart-config/tests/ui/derives/nest_and_flatten_config.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct NestedConfig {
    field: u64,
}

#[derive(DescribeConfig)]
struct TestConfig {
    #[config(nest, flatten)]
    bogus: NestedConfig,
}

fn main() {}
